--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #开发模式
 spring.profiles.active=dev
+#tomcat端口
+server.port=8011
 # JPA 配置
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
