--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!-- poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.17</version>
+        </dependency>
+        <dependency>
+             <groupId>org.apache.poi</groupId>
+             <artifactId>poi-ooxml</artifactId>
+             <version>3.17</version>
+         </dependency>
+
         <!--mongodb-->
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
